--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -15,3 +15,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
+          plugin_topics: yes
+          plugin_topics_limit: 5
+          plugin_topics_mode: icons
